# mbtb-app

./: .gitattributes  .gitignore  .travis.yml  README.md
docs/: README.md  pull_request_template.md
docs/contributing/: committing_code.md  index.md  writing_code.md
docs/howto/: README.md  deployment_django.md  docker_django.md
docs/misc/: README.md  design_philosophies.md
mbtb_app/db/: menus.sql  schema.sql
mbtb_app/resources/apis/data/: Procfile  manage.py
mbtb_app/resources/apis/data/data/: settings.py  urls.py  wsgi.py
mbtb_app/resources/apis/data/mbtb/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
mbtb_app/resources/apis/data/tissue_requests/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
mbtb_app/resources/apis/data_app/: manage.py
mbtb_app/resources/apis/data_app/data_app/: settings.py  urls.py  wsgi.py
mbtb_app/resources/apis/data_app/dataapp/: apps.py  models.py  serializers.py  views.py
mbtb_app/resources/apis/images/: .gitignore  CMakeLists.txt  README.md
mbtb_app/resources/apis/images/libs/: CMakeLists.txt
mbtb_app/resources/apis/images/src/: CZIImage.cpp  SampleDBConnect.cpp  SampleLibCZI.cpp
mbtb_app/resources/apis/images/src/auth/: AdminAuthentication.cpp  Authentication.cpp
mbtb_app/resources/apis/images/src/auth/include/: AdminAuthentication.h  Authentication.h
mbtb_app/resources/apis/images/src/config/: Configuration.cpp
mbtb_app/resources/apis/images/src/config/include/: Configuration.h
mbtb_app/resources/apis/images/src/czi_image/: CZIController.cpp  CZIController.h  TempController.cpp  TempController.h  TissueMetaData.cpp  czi_controller.cpp  czi_controller.h
mbtb_app/resources/apis/images/src/czi_image/include/: CZIController.h  INCLIBCZI.h  IncCZICMD.h  IncLIBCZI.h  TissueMetaData.h
mbtb_app/resources/apis/images/src/db/: DBAdminAuthentication.cpp  DBConnection.cpp  DBTissueMetaData.cpp  DBUserAuthentication.cpp
mbtb_app/resources/apis/images/src/db/include/: DBAdminAuthentication.h  DBConnection.h  DBTissueMetaData.h  DBUserAuthentication.h
mbtb_app/resources/apis/images/src/db/sql/: selectAdminAuthToken.sql  selectTissueMetaData.sql  selectUserAuthToken.sql
mbtb_app/resources/apis/images/src/rest_base/: Controller.cpp  Router.cpp  basic_controller.cpp
mbtb_app/resources/apis/images/src/rest_base/include/: Controller.h  RestController.h  Router.h  UserInterruptHandler.h  basic_controller.h
mbtb_app/resources/apis/user_registration/: Dockerfile  manage.py  requirements.txt
mbtb_app/resources/apis/user_registration/register/: models.py  permissions.py  serializers.py  urls.py  (+1 more)
mbtb_app/resources/apis/users/: Procfile  manage.py  requirements.txt
mbtb_app/web_portal/mbtb_portal/: .gitignore  README.md  package-lock.json  package.json
mbtb_app/web_portal/mbtb_portal/config/: custom.js  models.js  policies.js  routes.js  session.js  token.js
mbtb_app/web_portal/mbtb_portal/tasks/: pipeline.js
mbtb_app/web_portal/mbtb_portal/test/: lifecycle.test.js  test_file.csv
mbtb_app/web_portal/mbtb_portal/views/: 404.ejs
(+257 files in other folders)
